feature: added function property and path restrictions